@@ -76,63 +76,49 @@ public class ReflectUtil {
         vimObjList.clear();
     }
 
-    public static void setObjectField(Object object, Field field, String type, String value) throws IllegalArgumentException, IllegalAccessException {
+    public static void setObjectField(final Object object, final Field field, final String type, final String value) throws IllegalArgumentException, IllegalAccessException {
         if ("String".equals(type) || "string".equals(type)) {
             field.set(object, value);
-        } else if ("int".equals(type)) {
+        } else if ("int".equals(type) || "Integer".equals(type)) {
             field.set(object, Integer.parseInt(value));
-        } else if ("Integer".equals(type)) {
-            field.set(object, new Integer(value));
-        } else if ("short".equals(type)) {
+        } else if ("short".equals(type) || "Short".equals(type)) {
             field.set(object, Short.parseShort(value));
-        } else if ("Short".equals(type)) {
-            field.set(object, new Short(value));
-        } else if ("byte".equals(type)) {
+        } else if ("byte".equals(type) || "Byte".equals(type)) {
             field.set(object, Byte.parseByte(value));
-        } else if ("Byte".equals(type)) {
-            field.set(object, new Byte(value));
-        } else if ("long".equals(type)) {
+        } else if ("long".equals(type) || "Long".equals(type)) {
             field.set(object, Long.parseLong(value));
-        } else if ("Long".equals(type)) {
-            field.set(object, new Long(value));
-        } else if ("float".equals(type)) {
+        } else if ("float".equals(type) || "Float".equals(type)) {
             field.set(object, Float.parseFloat(value));
-        } else if ("Float".equals(type)) {
-            field.set(object, new Float(value));
-        } else if ("boolean".equals(type)) {
+        } else if ("boolean".equals(type) || "Boolean".equals(type)) {
             field.set(object, Boolean.parseBoolean(value));
-        } else if ("Boolean".equals(type)) {
-            field.set(object, new Boolean(value));
         } else if ("Calendar".equals(type) || "dateTime".equals(type)) {
-            Calendar cal = DatatypeConverter.parseTime(value);
+            final Calendar cal = DatatypeConverter.parseTime(value);
             field.set(object, cal);
-        } else if ("double".equals(type)) {
+        } else if ("double".equals(type) || "Double".equals(type)) {
             field.set(object, Double.parseDouble(value));
-        } else if ("Double".equals(type)) {
-            field.set(object, new Double(value));
         } else {
             throw new RuntimeException("Unexpected Type at setObjectField: " + field.getType().getCanonicalName() + field.getName());
         }
     }
 
-    public static void setObjectArrayField(Object object, Field field, String type, List<String> values) throws IllegalArgumentException, IllegalAccessException {
+    public static Object getObjectArray(String type, List<String> values) throws IllegalArgumentException, IllegalAccessException {
         if ("String[]".equals(type) || "string[]".equals(type)) {
-            String[] vals = new String[values.size()];
-            field.set(object, values.toArray(vals));
-        } else if ("int[]".equals(type)) {
-            field.set(object, toIntArray(values));
-        } else if ("short[]".equals(type)) {
-            field.set(object, toShortArray(values));
-        } else if ("byte[]".equals(type)) {
-            field.set(object, toByteArray(values));
-        } else if ("long[]".equals(type)) {
-            field.set(object, toLongArray(values));
-        } else if ("float[]".equals(type)) {
-            field.set(object, toFloatArray(values));
-        } else if ("boolean[]".equals(type)) {
-            field.set(object, toBooleanArray(values));
+            final String[] vals = new String[values.size()];
+            return values.toArray(vals);
+        } else if ("int[]".equalsIgnoreCase(type)) {
+            return toIntArray(values);
+        } else if ("short[]".equalsIgnoreCase(type)) {
+            return toShortArray(values);
+        } else if ("byte[]".equalsIgnoreCase(type)) {
+            return toByteArray(values);
+        } else if ("long[]".equalsIgnoreCase(type)) {
+            return toLongArray(values);
+        } else if ("float[]".equalsIgnoreCase(type)) {
+            return toFloatArray(values);
+        } else if ("boolean[]".equalsIgnoreCase(type)) {
+            return toBooleanArray(values);
         } else {
-            throw new RuntimeException("Unexpected Type at setObjectArrayField: " + field.getType().getCanonicalName() + field.getName());
+            throw new RuntimeException("Unexpected Type at getObjectArray: " + type);
         }
     }
 
@@ -212,36 +198,36 @@ public class ReflectUtil {
         } else if ("String[]".equals(type)) {
             return values.toArray(new String[values.size()]);
         } else if ("int".equals(type)) {
-            return new Integer(values.get(0));
+            return Integer.valueOf(values.get(0));
         } else if ("int[]".equals(type)) {
             return values.stream().mapToInt(Integer::parseInt).toArray();
             //return toIntArray(values);
         } else if ("short".equals(type)) {
-            return new Short(values.get(0));
+            return Short.parseShort(values.get(0));
         } else if ("short[]".equals(type)) {
             return toShortArray(values);
         } else if ("byte".equals(type)) {
-            return new Byte(values.get(0));
+            return Byte.parseByte(values.get(0));
         } else if ("byte[]".equals(type)) {
             return toByteArray(values);
         } else if ("long".equals(type)) {
-            return new Long(values.get(0));
+            return Long.parseLong(values.get(0));
         } else if ("long[]".equals(type)) {
             return values.stream().mapToLong(Long::parseLong).toArray();
             //return toLongArray(values);
         } else if ("float".equals(type)) {
-            return new Float(values.get(0));
+            return Float.parseFloat(values.get(0));
         } else if ("float[]".equals(type)) {
             return toFloatArray(values);
         } else if ("boolean".equals(type)) {
-            return new Boolean(values.get(0));
+            return Boolean.parseBoolean(values.get(0));
         } else if ("boolean[]".equals(type)) {
             return toBooleanArray(values);
         } else if ("Calendar".equals(type) || "dateTime".equals(type)) {
             Calendar cal = DatatypeConverter.parseTime(values.get(0));
             return cal;
         } else if ("double".equals(type)) {
-            return new Double(values.get(0));
+            return Double.parseDouble(values.get(0));
         } else if ("double[]".equals(type)) {
             return values.stream().mapToDouble(Double::parseDouble).toArray();
             //return toDoubleArray(values);
